@@ -197,6 +197,12 @@ const char *X509_verify_cert_error_string(long n)
 		return("Suite B: curve not allowed for this LOS");
 	case X509_V_ERR_SUITE_B_CANNOT_SIGN_P_384_WITH_P_256:
 		return("Suite B: cannot sign P-384 with P-256");
+	case X509_V_ERR_HOSTNAME_MISMATCH:
+		return("Hostname mismatch");
+	case X509_V_ERR_EMAIL_MISMATCH:
+		return("Email address mismatch");
+	case X509_V_ERR_IP_ADDRESS_MISMATCH:
+		return("IP address mismatch");
 
 	default:
 		BIO_snprintf(buf,sizeof buf,"error number %ld",n);
